--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-    "name": "font-thief",
-    "version": "1.0.0",
-    "description": "",
-    "author": "",
-    "license": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node . -h",
-        "build": "babel app --out-dir dist"
-    },
-    "repository": {
-        "type": "",
-        "url": ""
-    },
-    "bin": {
-        "loot": "dist/index.js"
-    },
-    "main": "dist",
-    "dependencies": {
-        "@babel/cli": "^7.2.3",
-        "@babel/core": "^7.2.2",
-        "@babel/preset-env": "^7.3.1",
-        "@babel/register": "^7.0.0",
-        "colors": "^1.3.1",
-        "fs-extra": "^7.0.0",
-        "http-https": "^1.0.0",
-        "is-url": "^1.2.4",
-        "pako": "^1.0.8",
-        "path": "^0.12.7",
-        "puppeteer": "^1.13.0",
-        "underscore": "^1.9.1",
-        "url-slug": "^2.0.0",
-        "woff2": "^0.2.2",
-        "yargs": "^12.0.1"
-    },
-    "devDependencies": {}
+  "name": "font-thief",
+  "version": "1.0.0",
+  "description": "Font Thief is a tool to extract fonts from websites.",
+  "author": "LR",
+  "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node . -h",
+    "build": "babel app --out-dir dist"
+  },
+  "repository": {
+    "type": "",
+    "url": ""
+  },
+  "bin": {
+    "loot": "dist/index.js"
+  },
+  "main": "dist",
+  "dependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/register": "^7.0.0",
+    "colors": "^1.3.1",
+    "fs-extra": "^7.0.0",
+    "http-https": "^1.0.0",
+    "is-url": "^1.2.4",
+    "pako": "^1.0.8",
+    "path": "^0.12.7",
+    "puppeteer": "^1.20.0",
+    "underscore": "^1.9.1",
+    "url-slug": "^2.0.0",
+    "woff2": "^0.2.2",
+    "yargs": "^12.0.1"
+  },
+  "devDependencies": {
+    "bindings": "^1.5.0"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
