--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node . -h",
+    "start2": "node . -s https://suzyhoodless.com",
     "build": "npx babel app --out-dir dist",
     "prepublishOnly": "yarn build"
   },
@@ -19,23 +20,24 @@
   },
   "main": "dist",
   "dependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/register": "^7.0.0",
-    "colors": "^1.3.1",
-    "fs-extra": "^7.0.0",
+    "@babel/cli": "^7.25.9",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/register": "^7.25.9",
+    "colors": "^1.4.0",
+    "fs-extra": "^11.2.0",
     "http-https": "^1.0.0",
     "is-url": "^1.2.4",
-    "pako": "^1.0.8",
+    "pako": "^2.1.0",
     "path": "^0.12.7",
-    "puppeteer": "^1.20.0",
-    "underscore": "^1.9.1",
-    "url-slug": "^2.0.0",
-    "woff2": "^0.2.2",
-    "yargs": "^12.0.1"
+    "puppeteer": "^23.10.1",
+    "ttf2woff2": "^6.0.1",
+    "underscore": "^1.13.7",
+    "url-slug": "^4.0.1",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.26.3",
     "bindings": "^1.5.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
